<resources>
    <string name="app_name">Park It</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="reserve_for">Reserve for :</string>
    <string name="search">Search</string>
    <string name="time">Time</string>
    <string name="parking">Parking Spot</string>
    <string name="pay_and_reserve">Pay and Reserve</string>
    <string name="more">More</string>
    <string name="great">Great!</string>
    <string name="your_reservation_has_been_confirmed">Your reservation has been "\n" confirmed.</string>
    <string name="check">Check</string>
    <string name="close">Close</string>
    <string name="domain">"http://ridecellparking.herokuapp.com/api/v1/parkinglocations/"</string>

    <string name="get_current_location">Get Current Location</string>
    <string name="cost_min">Cost/min</string>
    <string name="min_time">Min</string>
    <string name="max_time">Max</string>
    <string name="no_internet_connection">No Internet Connection :(</string>
    <string name="internet_msg">Please connect to internet for using the application.</string>
    <string name="retry">RETRY</string>
    <string name="close_all_caps">CLOSE</string>
    <string name="pay_to_reserve">Pay to Reserve</string>
    <string name="open_spots">Open Spots</string>
    <string name="cost">Cost</string>
    <string name="distance">Distance</string>
    <string name="parking_spot_info">Parking spot info</string>
    <string name="title_activity_dashbord">Dashbord</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_car">My Car</string>
    <string name="reservation">Reservation</string>
    <string name="find">Find</string>
</resources>
