<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_tick_box" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="bottom"
            android:text="@string/great"
            android:textColor="#5C5C5C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/your_reservation_has_been_confirmed"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_check"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="@string/check"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
