<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:orientation="vertical">-->

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="gone" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/cost_min"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_haha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/min_time"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="top"
                android:text="@string/max_time"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_join_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_pay_reserve"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_round_white_filled"
        android:text="@string/pay_and_reserve"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:text="@string/more"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginTop="-32dp"-->
    <!--android:background="@drawable/ic_arrow_drop_down_blue_32dp" />-->

    <!--</LinearLayout>-->


</LinearLayout>
