<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar_with_back_btn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:src="@drawable/parking" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="#95000000"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorGrey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/open_spots"
                                android:textColor="@color/colorWhite" />

                            <TextView
                                android:id="@+id/tv_open_spot"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="1"
                                android:textSize="20sp"
                                android:textColor="@color/colorWhite" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cost"
                                android:textColor="@color/colorWhite" />

                            <TextView
                                android:id="@+id/tv_cost"
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorWhite" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/distance"
                                android:textColor="@color/colorWhite" />

                            <TextView
                                android:textSize="20sp"

                                android:id="@+id/tv_distance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/colorWhite" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>


            <ProgressBar
                android:id="@+id/pb"
                android:layout_margin="16dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progress"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <!--Date-->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_date_range_black_24dp" />

                    <LinearLayout
                        android:id="@+id/ll_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/date"
                            android:textColor="@color/colorGrey"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="0.5dp"
                            android:background="@color/colorGrey" />
                    </LinearLayout>


                    <!--Time-->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_access_time_black_24dp" />

                    <LinearLayout
                        android:id="@+id/ll_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/time"
                            android:textColor="@color/colorGrey"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="0.5dp"
                            android:background="@color/colorGrey" />

                    </LinearLayout>
                </LinearLayout>

                <!--SeekBar-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="14dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/reserve_for"
                        android:textColor="@color/colorGrey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_reserve_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_reserve_remaining"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text=" -- min"
                        android:textColor="@color/colorGrey"
                        android:textSize="16sp" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/sb_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp" />

                <TextView
                    android:id="@+id/tv_cost_per_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />





            </LinearLayout>


            <Button
                android:id="@+id/btn_pay_to_reserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_background"
                android:text="@string/pay_to_reserve"
                android:textAllCaps="false"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="34dp"
                android:textColor="@color/colorWhite"
                android:textSize="19sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

